# Co-Off-API

./: .env.exemplo  .gitignore  .isort.cfg  .pdm-python  .pre-commit-config.yaml  .pylintrc  README.md  build.sh  core.json  db.sqlite3  dump.json  pyproject.toml  requirements.txt  static.json
app/: settings.py  urls.py
core/: admin.py  authentication.py
core/migrations/: 0001_initial.py  0002_categoria.py  0003_ingrediente.py  0004_bebida.py  0005_bebida_categoria_bebida_ingredientes_bebida_isbn_and_more.py  0006_remove_bebida_isbn_comida.py  0007_bebida_descrição_comida_descrição_compra.py  0008_itenscompra.py  0009_alter_itenscompra_compra.py  0010_remove_bebida_categoria_remove_bebida_ingredientes_and_more.py  0011_remove_produto_categoria_remove_produto_ingredientes_and_more.py  0012_remove_itenscompra_bebida.py  0013_alter_itenscompra_compra.py  0014_alter_produto_ingredientes.py  0015_produto_imagemdoproduto.py  0016_itenscompra_produto_alter_itenscompra_compra.py  0017_itenscompra_observacoes.py  0018_alter_itenscompra_observacoes.py  0019_ingrediente_status.py  0020_user_cep_user_cpf_user_endereco_user_idade_and_more.py  0021_alter_user_cep_alter_user_cpf_alter_user_idade_and_more.py  0022_rename_descrição_produto_descricao.py  0023_alter_ingrediente_status.py
core/models/: __init__.py  bebidas.py  categoria.py  comidas.py  compra.py  ingrediente.py  ingredientes.py  produto.py  user.py
core/serializers/: __init__.py  bebidas.py  categoria.py  comidas.py  compra.py  ingrediente.py  produto.py  user.py
core/views/: __init__.py  bebidas.py  categoria.py  comidas.py  compra.py  ingrediente.py  produto.py  user.py
scripts/: cria_api.py  set_my_ip.py
uploader/: views.py
uploader/migrations/: 0001_initial.py
uploader/models/: document.py  image.py
uploader/serializers/: document.py  image.py
